Add pastel styling and HTML structure

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,1 +1,16 @@
-<h1>Welcome</h1><a href='/ui/login.html'>Login</a> | <a href='/ui/signup.html'>Signup</a> | <a href='/ui/profile.html'>Profile</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Welcome</title>
+  <link rel="stylesheet" href="/ui/style.css">
+  <script src="https://unpkg.com/vue@3"></script>
+  <script src="/ui/script.js"></script>
+</head>
+<body>
+  <h1>Welcome</h1>
+  <a href='/ui/login.html'>Login</a> |
+  <a href='/ui/signup.html'>Signup</a> |
+  <a href='/ui/profile.html'>Profile</a> |
+  <a href='#' onclick="logout(); return false;">Logout</a>
+</body>
+</html>
